--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,9 @@ h2 {
   font-family: new-kansas, serif;
   margin: 0;
 }
+h2 {
+  line-height: 1.3;
+}
 
 .logo {
   height: 2.5rem;
@@ -134,7 +137,6 @@ h2 {
 #getWaitlistContainer {
   width: unset;
 }
-.gw-text-2xl,
 .gw-flex-row {
   display: none;
 }
