--- a/styles.css
+++ b/styles.css
@@ -161,7 +161,8 @@ a:hover {
   box-shadow: 0px 2rem 4rem -1rem #141d1b;
   height: 0;
   overflow: hidden;
-  padding-bottom: calc(80vw * 9 / 16);
+  /* padding-bottom: calc(80vw * 9 / 16); */
+  padding-bottom: 80vw;
   position: relative;
   width: 80vw;
 }
