--- a/styles.css
+++ b/styles.css
@@ -167,7 +167,7 @@ a:hover {
   width: 80vw;
 }
 
-#softbox iframe {
+#softbox video {
   border: none;
   height: 100%;
   left: 0;
@@ -200,5 +200,9 @@ a:hover {
   .card {
     min-height: 24rem;
     flex: 1 0 10rem;
+  }
+  #softbox {
+    padding-bottom: 100vw;
+    width: 100vw;
   }
 }
