Add content cards

--- a/styles.css
+++ b/styles.css
@@ -126,54 +126,79 @@ a:hover {
 
 #cards {
   display: flex;
+  flex-wrap: wrap;
   gap: 1rem;
   margin: 1rem 0;
 }
 .card {
-  background: #00333d11;
   border-radius: 1rem;
+  box-shadow: 0px 1rem 2rem -1rem #0005;
+  cursor: pointer;
+  flex: 1 1 18rem;
+  height: 24rem;
+  overflow: hidden;
+  position: relative;
+}
+.card:hover .card-info {
+  bottom: -6rem;
+}
+.card-img {
+  background: transparent
+    url('https://res.cloudinary.com/bigfoot-cdn/image/upload/v1664983669/placeholders/stock_images/beach_bar_1_kiakjq.jpg')
+    no-repeat center / cover;
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+.card-info {
+  align-items: flex-start;
+  backdrop-filter: blur(0.5rem);
+  background: #0005;
+  bottom: 0;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  height: 12rem;
+  left: 0;
+  padding: 1.5rem;
+  position: absolute;
+  transition: bottom 0.4s cubic-bezier(0.9, 0, 0.1, 1);
+  width: 100%;
+  z-index: 1;
+}
+.card-location {
   flex: 1;
-  height: 384px;
+  font-size: 14px;
+  font-weight: 700;
+}
+.card-title {
+  font-size: 22px;
+  line-height: 24px;
+}
+.card-tag {
+  background: #fff3;
+  border-radius: 4px;
+  font-size: 11px;
+  font-weight: 700;
+  letter-spacing: 0.1em;
+  padding: 4px 8px;
+  text-transform: uppercase;
+}
+.card-date {
+  background: #fffe;
+  border-radius: 4px;
+  color: #00333d;
+  font-size: 16px;
+  font-weight: 700;
+  padding: 0.5rem;
 }
 
 #footer {
   padding: 2rem;
   text-align: center;
-}
-
-/* popup */
-
-#popup {
-  align-items: center;
-  backdrop-filter: blur(4px);
-  background: #e9f3eedd;
-  display: none;
-  height: 100vh;
-  justify-content: center;
-  left: 0;
-  position: absolute;
-  top: 0;
-  width: 100vw;
-}
-
-#softbox {
-  border-radius: 1rem;
-  box-shadow: 0px 2rem 4rem -1rem #141d1b;
-  height: 0;
-  overflow: hidden;
-  /* padding-bottom: calc(80vw * 9 / 16); */
-  padding-bottom: 80vw;
-  position: relative;
-  width: 80vw;
-}
-
-#softbox video {
-  border: none;
-  height: 100%;
-  left: 0;
-  position: absolute;
-  top: 0;
-  width: 100%;
 }
 
 /* getwaitlist overrides */
