Support blur on iOS

--- a/styles.css
+++ b/styles.css
@@ -153,6 +153,7 @@ a:hover {
   top: 0;
 }
 .card-info {
+  -webkit-backdrop-filter: blur(0.5rem);
   align-items: flex-start;
   backdrop-filter: blur(0.5rem);
   background: #0005;
